deploy/ing-with-apex-domain.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: voyager-demo
  namespace: default
spec:
  tls:
  - hosts:
    - kiteci.com
    - www.kiteci.com
    - api.kiteci.com
    - ws.kiteci.com
    ref:
      kind: Certificate
      name: kiteci-com
  rules:
  - host: api.kiteci.com
    http:
      paths:
      - backend:
          serviceName: hello-grpc
          servicePort: '80'
  - host: ws.kiteci.com
    http:
      paths:
      - backend:
          serviceName: hello-websocket
          servicePort: '80'
  - host: kiteci.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: '80'
